# built_in_video_recorder

./: README.md  pyproject.toml  requirements.txt
built_in_video_recorder/: hooks.py  modules.txt  pyproject.toml  requirements.txt
built_in_video_recorder/api/: download_cert_pdf.py  generate_certificate.py  video_compressor.py
built_in_video_recorder/built_in_video_recorder/doctype/student_complete_progress/: student_complete_progress.js  student_complete_progress.json  student_complete_progress.py  test_student_complete_progress.py
built_in_video_recorder/public/css/: video_recorder.css
built_in_video_recorder/public/js/: download_certificate.js  generate_certificate.js  hide_library.js  video_recorder.js
